<resources>
    <string name="app_name">My Figure Collection</string>
    <string name="title_activity_main">Pictures</string>

    <string name="title_section1">Owned</string>
    <string name="title_section2">Ordered</string>
    <string name="title_section3">Wished</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="drawer_close">Close menu</string>
    <string name="drawer_open">Open menu</string>
    <string name="collection">Collection</string>
    <string name="gallery">Gallery</string>

    <plurals name="pictures">
        <item quantity="one">%1$d Picture</item>
        <item quantity="other">%1$d Pictures</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%1$d Item</item>
        <item quantity="other">%1$d Items</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">Picture</string>
    <string name="action_refresh">refresh</string>
    <string name="retireving">"Retrieving %s"</string>
    <string name="retireving_error">An error occured retrieving %s</string>
    <string name="title_activity_item">ItemActivity</string>
</resources>
