<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_gallery"
            android:checked="true"
            android:title="@string/gallery"/>

        <item
            android:id="@+id/section"
            android:title="@string/collection">
            <menu>
                <item
                    android:id="@+id/drawer_owned"
                    android:title="@string/title_section1"/>

                <item
                    android:id="@+id/drawer_ordered"
                    android:title="@string/title_section2"/>

                <item
                    android:id="@+id/drawer_wished"
                    android:title="@string/title_section3"/>

            </menu>
        </item>

    </group>
</menu>